fixed bug when saving calc step with agg functions. add download r code from processing chain status

--- a/calc-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/calc-webapp/src/main/webapp/WEB-INF/web.xml
@@ -118,7 +118,10 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.zip</url-pattern>
 	</servlet-mapping>
-	
+	<servlet-mapping>
+		<servlet-name>spring</servlet-name>
+		<url-pattern>*.R</url-pattern>
+	</servlet-mapping>
 	<!-- ====================================================== -->
 	<!-- MISCELLANEOUS -->
 	<!-- ====================================================== -->
