--- a/calc-jooq-code-gen/pom.xml
+++ b/calc-jooq-code-gen/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-a19</version>
+		<version>1.0-a20-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
