--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-a21-SNAPSHOT</version>
+		<version>1.0-a21</version>
 		<relativePath>..</relativePath>
 	</parent>
 
