--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -99,6 +99,11 @@
 									<name>org.openforis.calc.engine.Worker.Status</name>
 									<converter>org.openforis.calc.persistence.jooq.WorkerStatusConverter</converter>
 								</customType>
+								<customType>
+									<name>org.openforis.calc.metadata.WorkspaceSettings.VIEW_STEPS</name>
+									<converter>org.openforis.calc.persistence.jooq.WorkspaceSettingsViewStepsConverter</converter>
+								</customType>
+								
 							</customTypes>
 							<forcedTypes>
 								<forcedType>
@@ -148,6 +153,10 @@
 								<forcedType>
 									<name>org.openforis.calc.engine.ParameterMap</name>
 									<expression>.*\.error_settings\.parameters</expression>
+								</forcedType>
+								<forcedType>
+									<name>org.openforis.calc.metadata.WorkspaceSettings.VIEW_STEPS</name>
+									<expression>.*\.workspace_settings\.view_steps</expression>
 								</forcedType>
 							</forcedTypes>
 						</database>
