updated instructions for OS X 10.10+

--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -125,7 +125,8 @@
 									<goal>exec</goal>
 								</goals>
 								<configuration>
-									<executable>${installbuilder-home}/bin/builder</executable>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>
+<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
 									<arguments>
 										<argument>build</argument>
 										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
@@ -157,7 +158,8 @@
 									<goal>exec</goal>
 								</goals>
 								<configuration>
-									<executable>${installbuilder-home}/bin/builder</executable>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								
+<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
 									<arguments>
 										<argument>build</argument>
 										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
