--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -112,6 +112,10 @@
 								</forcedType>
 								<forcedType>
 									<name>org.openforis.calc.engine.ParameterMap</name>
+									<expression>.*\.sampling_design\.two_stages_settings</expression>
+								</forcedType>
+								<forcedType>
+									<name>org.openforis.calc.engine.ParameterMap</name>
 									<expression>.*\.sampling_design\.stratum_join_settings</expression>
 								</forcedType>
 								<forcedType>
