--- a/calc-core/pom.xml
+++ b/calc-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-b3-SNAPSHOT</version>
+		<version>1.0-b3</version>
 		<relativePath>..</relativePath>
 	</parent>
 
