--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -20,9 +20,9 @@
 		<installbuilder-file-name>openforiscalc_installbuilder.xml</installbuilder-file-name>
 		<installbuilder-with-jdk-file-name>openforiscalc_installbuilder_jdk.xml</installbuilder-with-jdk-file-name>
 		<!-- installer file names -->
-		<windows-installer-file-name>OpenForisCalc-${project.version}-windows-installer.exe</windows-installer-file-name>
-		<linux-installer-file-name>OpenForisCalc-${project.version}-linux-installer.run</linux-installer-file-name>
-		<osx-installer-file-name>OpenForisCalc-${project.version}-osx-installer.run</osx-installer-file-name>	
+		<windows-installer-file-name>OpenForisCalc-${project.version}-windows-installer-with-jdk.exe</windows-installer-file-name>
+		<linux-installer-file-name>OpenForisCalc-${project.version}-linux-installer-with-jdk.run</linux-installer-file-name>
+		<osx-installer-file-name>OpenForisCalc-${project.version}-osx-installer-with-jdk.app</osx-installer-file-name>	
 	</properties>
 	
 	<profiles>
@@ -269,21 +269,21 @@
 <!-- 								</configuration> -->
 <!-- 							</execution> -->
 							
-<!-- 							<execution> -->
-<!-- 								<id>windows-installer-with-jdk</id> -->
-<!-- 								<phase>package</phase> -->
-<!-- 								<goals> -->
-<!-- 									<goal>exec</goal> -->
-<!-- 								</goals> -->
-<!-- 								<configuration> -->
-<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
-<!-- 									<arguments> -->
-<!-- 										<argument>build</argument> -->
-<!-- 										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument> -->
-<!-- 										<argument>windows</argument> -->
-<!-- 									</arguments> -->
-<!-- 								</configuration> -->
-<!-- 							</execution> -->
+							<execution>
+								<id>windows-installer-with-jdk</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>	
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument>
+										<argument>windows</argument>
+									</arguments>
+								</configuration>
+							</execution>
 							
 <!-- 							<execution> -->
 <!-- 								<id>linux-installer</id> -->
@@ -302,53 +302,74 @@
 <!-- 								</configuration> -->
 <!-- 							</execution> -->
 							
-<!-- 							<execution> -->
-<!-- 								<id>linux-installer-with-jdk</id> -->
-<!-- 								<phase>package</phase> -->
-<!-- 								<goals> -->
-<!-- 									<goal>exec</goal> -->
-<!-- 								</goals> -->
-<!-- 								<configuration> -->
-<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
-<!-- 									<arguments> -->
-<!-- 										<argument>build</argument> -->
-<!-- 										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument> -->
-<!-- 										<argument>linux</argument> -->
-<!-- 									</arguments> -->
-<!-- 								</configuration> -->
-<!-- 							</execution> -->
+							<execution>
+								<id>linux-installer-with-jdk</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>	
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument>
+										<argument>linux</argument>
+									</arguments>
+								</configuration>
+							</execution>
 							
+							<execution>
+								<id>osx-installer-with-jdk</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								
+<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument>
+										<argument>osx</argument>
+									</arguments>
+								</configuration>
+							</execution>
 						</executions>
 					</plugin>
 					
 			    	<!-- 6. attach installers as artifact -->
-<!-- 					<plugin> -->
-<!-- 					    <groupId>org.codehaus.mojo</groupId> -->
-<!-- 					    <artifactId>build-helper-maven-plugin</artifactId> -->
-<!-- 					    <executions> -->
-<!-- 					        <execution> -->
-<!-- 					            <id>attach-installer-artifacts</id> -->
-<!-- 					            <phase>package</phase> -->
-<!-- 					            <goals> -->
-<!-- 					                <goal>attach-artifact</goal> -->
-<!-- 					            </goals> -->
-<!-- 					            <configuration> -->
-<!-- 					                <artifacts> -->
-<!-- 					                    <artifact> -->
-<!-- 					                        <file>${project.build.directory}/${windows-installer-file-name}</file> -->
-<!-- 					                        <classifier>windows</classifier> -->
-<!-- 					                        <type>exe</type> -->
-<!-- 					                    </artifact> -->
-<!-- 					                    <artifact> -->
-<!-- 					                        <file>${project.build.directory}/${linux-installer-file-name}</file> -->
-<!-- 					                        <classifier>linux</classifier> -->
-<!-- 					                        <type>run</type> -->
-<!-- 					                    </artifact> -->
-<!-- 					                </artifacts> -->
-<!-- 					            </configuration> -->
-<!-- 					        </execution> -->
-<!-- 					    </executions> -->
-<!-- 					</plugin> -->
+					<plugin>
+					    <groupId>org.codehaus.mojo</groupId>
+					    <artifactId>build-helper-maven-plugin</artifactId>
+					    <executions>
+					        <execution>
+					            <id>attach-installer-artifacts</id>
+					            <phase>package</phase>
+					            <goals>
+					                <goal>attach-artifact</goal>
+					            </goals>
+					            <configuration>
+					                <artifacts>
+					                    <artifact>
+					                        <file>${project.build.directory}/${windows-installer-file-name}</file>
+					                        <classifier>windows</classifier>
+					                        <type>exe</type>
+					                    </artifact>
+					                    <artifact>
+					                        <file>${project.build.directory}/${linux-installer-file-name}</file>
+					                        <classifier>linux</classifier>
+					                        <type>run</type>
+					                    </artifact>
+					                    <artifact>
+					                        <file>${project.build.directory}/${osx-installer-file-name}</file>
+					                        <classifier>osx</classifier>
+					                        <type>dmg</type>
+					                    </artifact>
+					                </artifacts>
+					            </configuration>
+					        </execution>
+					    </executions>
+					</plugin>
 				
 				</plugins>
 			</build>		
