--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>1.0-b4-SNAPSHOT</version>
+		<version>2.0-a0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>calc-installer</artifactId>
@@ -246,6 +246,7 @@
 					</plugin>
 				
 					<!-- 5. execute installbuilder to produce the installers -->
+					<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
@@ -318,22 +319,21 @@
 								</configuration>
 							</execution>
 							
-							<execution>
-								<id>osx-installer-with-jdk</id>
-								<phase>package</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								
-<!-- 									<executable>${installbuilder-home}/bin/builder</executable> -->
-									<arguments>
-										<argument>build</argument>
-										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument>
-										<argument>osx</argument>
-									</arguments>
-								</configuration>
-							</execution>
+<!-- 							<execution> -->
+<!-- 								<id>osx-installer-with-jdk</id> -->
+<!-- 								<phase>package</phase> -->
+<!-- 								<goals> -->
+<!-- 									<goal>exec</goal> -->
+<!-- 								</goals> -->
+<!-- 								<configuration> -->
+<!-- 									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								 -->
+<!-- 									<arguments> -->
+<!-- 										<argument>build</argument> -->
+<!-- 										<argument>${basedir}/${installer-dir}/${installbuilder-with-jdk-file-name}</argument> -->
+<!-- 										<argument>osx</argument> -->
+<!-- 									</arguments> -->
+<!-- 								</configuration> -->
+<!-- 							</execution> -->
 						</executions>
 					</plugin>
 					
@@ -360,11 +360,11 @@
 					                        <classifier>linux</classifier>
 					                        <type>run</type>
 					                    </artifact>
-					                    <artifact>
-					                        <file>${project.build.directory}/${osx-installer-file-name}</file>
-					                        <classifier>osx</classifier>
-					                        <type>dmg</type>
-					                    </artifact>
+<!-- 					                    <artifact> -->
+<!-- 					                        <file>${project.build.directory}/${osx-installer-file-name}</file> -->
+<!-- 					                        <classifier>osx</classifier> -->
+<!-- 					                        <type>dmg</type> -->
+<!-- 					                    </artifact> -->
 					                </artifacts>
 					            </configuration>
 					        </execution>
